syntax = "proto3";

package flow_like_types;

import "google/protobuf/timestamp.proto";
import "node.proto";
import "pin.proto";
import "variable.proto";
import "comment.proto";

enum ExecutionStage {
  DEV = 0;
  INT = 1;
  QA = 2;
  PRE_PROD = 3;
  PROD = 4;
}

enum LogLevel {
  DEBUG = 0;
  INFO = 1;
  WARN = 2;
  ERROR = 3;
  FATAL = 4;
}

enum LayerType {
  FUNCTION = 0;
  MACRO = 1;
  COLLAPSED = 2;
}

message Layer {
  string id = 1;
  optional string parent_id = 2;
  string name = 3;
  LayerType type = 4;
  map<string, Node> nodes = 5;
  map<string, Variable> variables = 6;
  map<string, Comment> comments = 7;
  float coord_x = 8;
  float coord_y = 9;
  float coord_z = 10;
  map<string, Pin> pins = 11;
  optional string comment = 12;
  optional string error = 13;
}

message Board {
  string id = 1;
  string name = 2;
  string description = 3;
  map<string, Node> nodes = 4;
  map<string, Variable> variables = 5;
  map<string, Comment> comments = 6;
  float viewport_x = 7;
  float viewport_y = 8;
  float viewport_zoom = 9;
  uint32 version_major = 10;
  uint32 version_minor = 11;
  uint32 version_patch = 12;
  ExecutionStage stage = 13;
  LogLevel log_level = 14;
  map<string, string> refs = 15;
  google.protobuf.Timestamp created_at = 16;
  google.protobuf.Timestamp updated_at = 17;
  map<string, Layer> layers = 18;
}