syntax = "proto3";

package flow_like_types;

import "pin.proto";
import "variable.proto";

message CompiledPin {
    string id = 1;
    string name = 2;
    PinType pin_type = 3;
    VariableType data_type = 4;
    string schema = 5;
    ValueType value_type = 6;
    repeated string depends_on = 7;
    repeated string connected_to = 8;
    bytes default_value = 9;
}